--- a/Document/【Amaris】/Expert_pages/regist.html
+++ b/Document/【Amaris】/Expert_pages/regist.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
 	<title>无标题文档</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta content="black" name="apple-mobile-web-app-status-bar-style" />
 </head>
 <body>
 <div data-role="page" id="home">
@@ -15,7 +19,7 @@
     	<div data-role="content">	
 
 	      <p><a href="register_expert.html" rel="external" data-role="button" >我是专家</a></p>
-	      <p><a href="#" data-role="button">我是企业</a></p>
+	      <p><a href="register_company.html" rel="external" data-role="button">我是企业</a></p>
     	</div>
     	<div data-role="footer">
 
