--- a/Document/【HappiLees】/Expert_pages/home.html
+++ b/Document/【HappiLees】/Expert_pages/home.html
@@ -3,46 +3,41 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>无标题文档</title>
+	<title>专家汇首页</title>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta content="black" name="apple-mobile-web-app-status-bar-style" />		
+    <meta content="black" name="apple-mobile-web-app-status-bar-style" />	
 </head>
 
 <body>
 <div data-role="page" id="page_home">
-  
-  <div data-role="header" data-theme="b">
-    <h1>首页</h1>
-  </div>
-  <div data-role="fieldcontain">
-    <label for="textinput" class="ui-hidden-accessible">文本输入:</label>
-    <input type="search" name="textinput" id="textinput"  placeholder="搜索" value=""  />
-  </div>
-  
-  
-  
-  <div data-role="content">
-    <div class="ui-grid-b">
-      <div class="ui-block-a"><a href="project.html" data-role="button">试验按钮</a></div>
-      <div class="ui-block-b"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-c"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-a"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-b"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-c"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-a"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-b"><a href="#" data-role="button">按钮区块</a></div>
-      <div class="ui-block-c"><a href="#" data-role="button">按钮区块</a></div>
+    <div data-role="content">
+    <div class="ui-grid-a">
+  	<div class="ui-block-a"><a href="login.html" rel="external" data-role="button" class="ui-btn-active">登陆</a></div>
+  	<div class="ui-block-b"><a href="#" data-role="button">注册</a></div>
     </div>
-  </div>
-  
-  <div data-role="footer" data-position="fixed" data-theme="b">
+    <hr>
+    <p>行业分类</p>
+    <hr>
+    <div class="ui-grid-b">
+      <div class="ui-block-a"><a href="project.html" data-role="button">行业</a></div>
+      <div class="ui-block-b"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-c"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-a"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-b"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-c"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-a"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-b"><a href="#" data-role="button">行业</a></div>
+      <div class="ui-block-c"><a href="#" data-role="button">行业</a></div>
+    </div>
+	</div>
+      <div data-role="footer" data-position="fixed" data-theme="b">
     <div data-role="navbar">
       <ul>
-        <li><a href="#page_home" data-icon="home" class="ui-btn-active ui-state-persist">首页</a></li>
+        <li><a href="#page_home" data-icon="home" >首页</a></li>
         <li><a href="#page_project" data-icon="arrow-r">项目</a></li>
         <li><a href="#page_center" data-icon="star">个人</a></li>
       </ul>
@@ -91,10 +86,16 @@
       </ul>
     </div>
   </div>
-
 </div>
-
-
-
 </body>
 </html>
+
+  <!--
+  <div data-role="fieldcontain">
+    <label for="textinput" class="ui-hidden-accessible">文本输入:</label>
+    <input type="search" name="textinput" id="textinput"  placeholder="搜索" value=""  />
+  </div>
+  -->
+  
+
+
