--- a/Document/【HappiLees】/Expert_pages/register_expert.html
+++ b/Document/【HappiLees】/Expert_pages/register_expert.html
@@ -26,7 +26,7 @@
   	</div>
     
     <div data-role="content">
-		<form method="post" action="">
+		<form method="post" action="validate.jsp">
 			<div data-role="fieldcontain">
         		<label for="UserName">用户名:</label>
         		<input type="text" name="UserNameInput" id="UserName" value="" placeholder="仅包括数字、字母或下划线" />
