--- a/Document/【HappiLees】/Expert_pages/center_expert.html
+++ b/Document/【HappiLees】/Expert_pages/center_expert.html
@@ -15,19 +15,19 @@
 <body>
 <div data-role="page" id="page">
     <div data-role="header">
-    	<p align="center">项目</p>
+    	<p align="center">个人中心</p>
     </div>    
 
     <div data-role="content">
-    	<p align="center">此处添加专家或企业的关注的项目列表</p>
+    	<p align="center">此处添加专家的个人中心内容</p>
 	</div>
     
 	<div data-role="footer" data-position="fixed">
     	<div data-role="navbar">
       		<ul>
         		<li><a href="home.html" rel="external" data-icon="home">首页</a></li>
-        		<li><a href="project.html" rel="external" data-icon="arrow-r" class="ui-btn-active">项目</a></li>
-        		<li><a href="center_expert.html" rel="external" data-icon="star">个人</a></li>
+        		<li><a href="project.html" rel="external" data-icon="arrow-r">项目</a></li>
+        		<li><a href="center_expert.html" rel="external" data-icon="star" class="ui-btn-active">个人</a></li>
       		</ul>
     	</div>
   	</div>
