--- a/Document/【HappiLees】/Expert_pages/register_expert.html
+++ b/Document/【HappiLees】/Expert_pages/register_expert.html
@@ -50,37 +50,37 @@
             <div data-role="fieldcontain">
         		<label for="BusinessSelect" class="select">所属行业:</label>
         		<select name="BusinessSelectMenu" id="BusinessSelect">
-                  <option value="option1">IT|通信|电子|互联网</option>
-                  <option value="option2">金融业</option>
-                  <option value="option3">房地产|建筑业</option>
-                  <option value="option3">商业服务</option>
-                  <option value="option3">贸易|批发|零售|租赁业</option>
-                  <option value="option3">文教体育|工业美术</option>
-                  <option value="option3">生产|加工|制造</option>
-                  <option value="option3">交通|运输|物流|仓储</option>
-                  <option value="option3">服务业</option>
-                  <option value="option3">文化|传媒|娱乐|体育</option>
-                  <option value="option3">能源|矿产|环保</option>
-                  <option value="option3">政府|非盈利机构</option>
-                  <option value="option3">农|林|牧|渔|其他</option>
+                  <option value="b_0">IT|通信|电子|互联网</option>
+                  <option value="b_1">金融业</option>
+                  <option value="b_2">房地产|建筑业</option>
+                  <option value="b_3">商业服务</option>
+                  <option value="b_4">贸易|批发|零售|租赁业</option>
+                  <option value="b_5">文教体育|工业美术</option>
+                  <option value="b_6">生产|加工|制造</option>
+                  <option value="b_7">交通|运输|物流|仓储</option>
+                  <option value="b_8">服务业</option>
+                  <option value="b_9">文化|传媒|娱乐|体育</option>
+                  <option value="b_10">能源|矿产|环保</option>
+                  <option value="b_11">政府|非盈利机构</option>
+                  <option value="b_12">农|林|牧|渔|其他</option>
                 </select>
       		</div>
             <div data-role="fieldcontain">
         		<label for="JobSelect" class="select">专长领域:</label>
         		<select name="JobSelectMenu" id="JobSelect">
-                  <option value="option1">销售|客服|市场</option>
-                  <option value="option2">财务|人力资源|行政</option>
-                  <option value="option3">项目|质量|高级管理</option>
-                  <option value="option3">IT|互联网|通信</option>
-                  <option value="option3">房产|建筑|物业管理</option>
-                  <option value="option3">金融</option>
-                  <option value="option3">采购|贸易|交通|物流</option>
-                  <option value="option3">生产|制造</option>
-                  <option value="option3">传媒|印刷|艺术|设计</option>
-                  <option value="option3">咨询|法律|教育|翻译</option>
-                  <option value="option3">服务业</option>
-                  <option value="option3">能源|环保|农业|科研</option>
-                  <option value="option3">兼职|实习|社工|其他</option>
+                  <option value="j_0">销售|客服|市场</option>
+                  <option value="j_1">财务|人力资源|行政</option>
+                  <option value="j_2">项目|质量|高级管理</option>
+                  <option value="j_3">IT|互联网|通信</option>
+                  <option value="j_4">房产|建筑|物业管理</option>
+                  <option value="j_5">金融</option>
+                  <option value="j_6">采购|贸易|交通|物流</option>
+                  <option value="j_7">生产|制造</option>
+                  <option value="j_8">传媒|印刷|艺术|设计</option>
+                  <option value="j_9">咨询|法律|教育|翻译</option>
+                  <option value="j_10">服务业</option>
+                  <option value="j_11">能源|环保|农业|科研</option>
+                  <option value="j_12">兼职|实习|社工|其他</option>
                 </select>
       		</div>
             <div data-role="fieldcontain">
