--- a/Document/【HappiLees】/Expert_pages/center_expert.html
+++ b/Document/【HappiLees】/Expert_pages/center_expert.html
@@ -15,11 +15,11 @@
 <body>
 <div data-role="page" id="page">
     <div data-role="header">
-    	<p align="center">个人中心</p>
+    	<h1>个人中心</h1>
     </div>    
 
     <div data-role="content">
-    	<p align="center">此处添加专家的个人中心内容</p>
+    	<p>此处添加专家的个人中心内容</p>
 	</div>
     
 	<div data-role="footer" data-position="fixed">
