--- a/Document/【HappiLees】/Expert_pages/regist.html
+++ b/Document/【HappiLees】/Expert_pages/regist.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>无标题文档</title>
+	<title>用户认证</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
@@ -13,17 +13,12 @@
 </head>
 <body>
 <div data-role="page" id="home">
-   		<div data-role="header" data-theme="b">
-			<h1>用户认证</h1>
-    	</div>
-    	<div data-role="content">	
 
+    	<div data-role="content">	
 	      <p><a href="register_expert.html" rel="external" data-role="button" >我是专家</a></p>
 	      <p><a href="register_company.html" rel="external" data-role="button">我是企业</a></p>
     	</div>
-    	<div data-role="footer">
 
-    	</div>
 	</div>
 </body>
 </html>
