--- a/Document/【HappiLees】/Expert_pages/regist_success.html
+++ b/Document/【HappiLees】/Expert_pages/regist_success.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>无标题文档</title>
+	<title>注册成功</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
@@ -16,18 +16,12 @@
 
 <div data-role="page" id="page">
   
-  <div data-role="header">
-    <h1>注册成功</h1>
-  </div>
-  
   <div data-role="content">
   	<p>恭喜您注册成功！我们的工作人员将在n个工作日内，对您的身份进行审核，请耐心等待，谢谢！</p>
+    <div class="ui-btn-a"><a href="home.html" rel="external" data-role="button" data-icon="back" align="center">返回首页</a></div>
   </div>
   
-  <div data-role="footer" data-position="fixed">
-    <h4>脚注</h4>
-  </div>
-
+  
 </div>
 
 </body>
