--- a/Document/【HappiLees】/Expert_pages/register_company.html
+++ b/Document/【HappiLees】/Expert_pages/register_company.html
@@ -1,26 +1,23 @@
 <!doctype html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-<title>无标题文档</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
+	<title>企业注册</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<meta content="black" name="apple-mobile-web-app-status-bar-style" />
-<noscript>
-您的浏览器不支持JavaScript,请使用其它浏览器
-</noscript>
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta content="black" name="apple-mobile-web-app-status-bar-style" />
+	<noscript>
+	您的浏览器不支持JavaScript,请使用其它浏览器
+	</noscript>
 <script src="regist_validate.js"></script>
 </head>
 
 <body>
 <div data-role="page" id="page">
-  <div data-role="header" data-theme="b">
-    <h1>企业认证</h1>
-  </div>
   <div data-role="content">
     <form id="myForm" method="post" action="">
       <div data-role="fieldcontain">
