--- a/Document/【HappiLees】/Expert_pages/register_expert.html
+++ b/Document/【HappiLees】/Expert_pages/register_expert.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>无标题文档</title>
+	<title>专家注册</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
@@ -21,9 +21,6 @@
 
 <body>
 <div data-role="page" id="basicinfo_expert">
-	<div data-role="header" data-theme="b">
-    	<h1>专家认证</h1>
-  	</div>
     
     <div data-role="content">
 		<form method="post" action="validate.jsp">
@@ -90,8 +87,6 @@
             <input type="submit" value="注册" />
         </form>
   </div>
-        <div data-role="footer"> </div>
-        </div>
 		
 	<script type="text/javascript">		
 			$("form").submit(function(e) {
