--- a/Document/【HappiLees】/Expert_pages/login.html
+++ b/Document/【HappiLees】/Expert_pages/login.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>登录</title>
+    <title>登陆</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
@@ -13,11 +13,7 @@
 </head>
 
 <body>
-<div data-role="page" id="page">
-  
-  <div data-role="header">
-    <h1>登录</h1>
-  </div>
+<div data-role="page" id="page"> 
   
   <div data-role="content">
   	<form method="post" action="">  
