--- a/Document/【HappiLees】/Expert_pages/project_expert.html
+++ b/Document/【HappiLees】/Expert_pages/project_expert.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>无标题文档</title>
+	<title>项目中心</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
@@ -15,19 +15,21 @@
 <body>
 
 <div data-role="page" id="page">
-  
-  <div data-role="header" data-theme="b">
-  <a href="#" data-role="button" data-icon="home" data-rel="back">返回</a>
-    <h1>项目介绍</h1>
-  </div>
+
   
   <div data-role="content">
-  	
+  
   </div>
   
-  <div data-role="footer" data-theme="b" data-position="fixed">
-  	<a href="#" data-role="button" >联系企业</a>
-  </div>
+	<div data-role="footer" data-position="fixed">
+    	<div data-role="navbar">
+      		<ul>
+        		<li><a href="home.html" rel="external" data-icon="home" class="ui-btn-active">首页</a></li>
+        		<li><a href="project.html" rel="external" data-icon="arrow-r">项目</a></li>
+        		<li><a href="center_expert.html" rel="external" data-icon="star">个人</a></li>
+      		</ul>
+    	</div>
+  	</div>
   
 </div>
 
