--- a/Document/【HappiLees】/Expert_pages/unloadtips.html
+++ b/Document/【HappiLees】/Expert_pages/unloadtips.html
@@ -16,11 +16,10 @@
 <div data-role="page" id="page">
   <div data-role="header">
     <button data-icon="arrow-l" data-iconpos="left">返回</button>
-    <h1>提示信息</h1>
   </div>
   
   <div data-role="content">
-  <p align="center">请先登录后再查看行业分类信息</p>
+  <p>请先登录后再查看行业分类信息</p>
   <a href="login.html" rel="external" data-role="button" class="ui-btn-active">登陆</a>
   <a href="#" data-role="button">注册</a>
   </div>
