--- a/Document/【HappiLees】/Expert_pages/regist.html
+++ b/Document/【HappiLees】/Expert_pages/regist.html
@@ -3,8 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>用户认证</title>
+	<title>无标题文档</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" href="theme.css"/>
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -13,12 +14,17 @@
 </head>
 <body>
 <div data-role="page" id="home">
-
+   		<div class="header" data-role="none">
+			<h1>用户认证</h1>
+    	</div>
     	<div data-role="content">	
+
 	      <p><a href="register_expert.html" rel="external" data-role="button" >我是专家</a></p>
 	      <p><a href="register_company.html" rel="external" data-role="button">我是企业</a></p>
     	</div>
+    	<div data-role="footer">
 
+    	</div>
 	</div>
 </body>
 </html>
