--- a/Document/【HappiLees】/Expert_pages/regist_fail.html
+++ b/Document/【HappiLees】/Expert_pages/regist_fail.html
@@ -3,8 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
-	<title>注册失败</title>
+	<title>无标题文档</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
+    <link rel="stylesheet" href="theme.css"/>
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -15,11 +16,17 @@
 <body>
 
 <div data-role="page" id="page">
-
+  
+  <div class="header" data-role="none">
+    <h1>注册失败</h1>
+  </div>
   
   <div data-role="content">
   	<p>很遗憾注册失败！请重新注册，谢谢！</p>
-	<div class="ui-btn-a"><a href="home.html" rel="external" data-role="button" data-icon="back" align="center">返回首页</a></div>
+  </div>
+  
+  <div data-role="footer" data-position="fixed">
+    <h4>脚注</h4>
   </div>
 
 </div>
