--- a/Document/【HappiLees】/Expert_pages/回收站/businesschoice.html
+++ b/Document/【HappiLees】/Expert_pages/回收站/businesschoice.html
@@ -37,11 +37,27 @@
 			object.href = newString;
 		}
 	</script>
+    <style>
+	*{
+		margin:0;padding:0;border:0;
+	}
+	
+	.header{
+		height:45px;
+		background-color:#09C;
+		font-size:12px;
+		color:#FFF;
+		text-align:center;
+		line-height:45px;
+	}
+	
+
+	</style>
 </head>
 
 <body>
 <div data-role="page" id="businesschoice_first">
-  <div data-role="header" data-theme="b">
+  <div class="header" data-role="none">
     <h1>行业类别</h1>
   </div>
   
