--- a/Document/【HappiLees】/Expert_pages/project_company.html
+++ b/Document/【HappiLees】/Expert_pages/project_company.html
@@ -1,4 +1,3 @@
-<%@ page contentType="text/html; charset=utf-8" language="java" import="java.sql.*" errorPage="" %>
 <!doctype html>
 <html>
 <head>
@@ -6,8 +5,8 @@
 	<meta name="viewport" content=" initial-scale=1.0,user-scalable=no" />
 	<title>专家汇</title>
 	<link rel="stylesheet" href="jquery/mobile/jquery.mobile-1.4.5.min.css" />
-    <link rel="stylesheet" href="theme.css"/>
-    <link rel="stylesheet" href="project_expert.css"/>
+    <link rel="stylesheet" href="theme.css" />
+    <link rel="stylesheet" href="project_company.css" />
 	<script src="jquery/jquery-1.11.1.min.js"></script>
 	<script src="jquery/mobile/jquery.mobile-1.4.5.min.js"></script>
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -23,15 +22,15 @@
 
     <div class="content" data-role="none">
     	<div class="project_field">
-    		<div class="project_second_title">申请中</div>
+    		<div class="project_second_title">寻找专家中</div>
             <div class="list">
             	<div class="project_name">XXX项目</div>
                 <div class="begin_time_font">发布时间&nbsp;:&nbsp;</div>
                 <div class="begin_time_number">2015-01-01</div>
                 <div class="deadline_time_font">截止时间&nbsp;:&nbsp;</div>
                 <div class="deadline_time_number">2015-02-01</div>
-                <div class="new_expert_font">企业回应&nbsp;:&nbsp;</div>
-                <div class="new_expert_number">是</div>
+                <div class="new_expert_font">新的申请专家&nbsp;:&nbsp;</div>
+                <div class="new_expert_number">3</div>
                 <div class="clear"></div>
         	</div>
         </div>
@@ -86,3 +85,6 @@
 </div>
 </body>
 </html>
+  
+
+
